--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
 	margin:0;
 	font-family: sans-serif;
 }
+.dark-mode{
+    background-image: url(dark.jpeg);
+	color: #ffffff;
+	background-size: 70em;
+}
 a {
 	color: inherit;
 	text-decoration: none;
@@ -19,7 +24,7 @@ a {
 header h1 {
 	float: left;
 	padding:15px 0;
-	color:    #0a080a;
+	color:  #ffffff;
 }
 header ul {
 	float: right;
@@ -32,15 +37,17 @@ header ul li a {
 	display: inline-block;
 }
 header ul li a:hover {
-	background-color:   #0a080a;
-	color: #fff;
+	background-color:   #000000;
+	color: #ffffff;
 }
 .active {
-	background-color:    #0a080a;
+	background-color: #0a080a;
 	color: #fff;
 }
 body {
 	background-image: url(background.jpeg);
+	color:#000000;
+	background-size: 80em;
 }
 .banner:after {
 	content:'';
@@ -53,7 +60,7 @@ body {
 	background-color: rgba(20, 143, 119, .6);
 }
 .banner h2 {
-	color: #fff;
+	color: #ffffff;
 	z-index: 1;
 	padding: 20px 25px;
 	border:3px solid #fff;
@@ -64,14 +71,14 @@ section {
 section h3 {
 	text-align: center;
 	padding:20px 0;
-	color:    #0a080a;
+	color:    #ffffff;
 	margin-bottom: 25px;
 }
 .centered-text{
     text-align: center;
 }
 .box {
-	color:   #0a080a;
+	color:   #ffffff;
 }
 .box:after {
 	content: '';
@@ -152,4 +159,4 @@ footer {
 		float: none;
 		margin-bottom: 20px;
 	}
-}	
+}
