--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 	font-family: sans-serif;
 }
 .dark-mode{
-	background-image: url(black.jpeg);
+	background-image: url(dark.jpeg);
 	color: #ffffff;
 	background-size: 70em;
 }
